css/style.css
body {
    overflow-x: hidden; /* Prevent horizontal scrolling */
    margin: 0;
    font-family: 'Raleway';
    display: flex;
    flex-direction: column;
    scroll-behavior: smooth;
    background-color: #EFD5C3;
}

main, .about-me, #skills, #projects, #my-art {
    width: 100vw; /* Ensure content doesn’t overflow viewport */
    box-sizing: border-box;
}

main {
    display: flex;
    flex-direction: row;
    width: 80%;
    margin: 0 auto;
    padding-top: 70px; /* Match the header height */
    box-sizing: border-box;
    /* Remove the fixed height to allow natural scrolling */
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 20px;
    padding-top: 10px;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 70px;
    background-color: #EFD5C3;
    z-index: 1000;
    box-sizing: border-box;
    /*box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.1);*/
}

nav {
    display: flex;
    gap: 15px;
    flex-wrap: nowrap; /* Prevents wrapping */
}

/* Style for Navigation Links */
nav a {
    text-decoration: none;
    color: black;
    font-family: 'Georgia';
    cursor: pointer;
}

header a {
    text-decoration: none;
    color: black;
    font-family: 'Raleway';
    margin: 0 15px;
    cursor: pointer;
}

.logo {
    width: 120px;
    height: 60px;
    padding-left: 20px;
}

main {
    display: flex;
    flex-direction: row;
    height: 100vh;
    width: 80%;
    margin: 0 auto;
}

.left-section {
    flex: 1;
    padding: 20px 40px;
    overflow: hidden;
}

.right-section {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
}

.right-section img {
    width: 100%;
    height: 100%;
    object-fit: contain;
    object-position: center center;
}

.large-text-l1 {
    font-family: 'Georgia';
    line-height: 0.9;
    margin-bottom: 5px;
    display: inline-block;
    overflow: hidden;
    font-size: calc(5.5vw);
    margin-top: 120px;
}

.large-text-l2 {
    font-family: 'Georgia';
    line-height: 0.9;
    margin-bottom: 5px;
    display: inline-block;
    overflow: hidden;
    font-size: calc(5.5vw);
    margin-top: 12px;
}

.body-text-l3 {
    font-family: 'Raleway';
    line-height: 0.9;
    margin-bottom: 5px;
    display: inline-block;
    overflow: hidden;
    font-size: calc(1.75vw);
    margin-top: 5px;
    line-height: 1.5;
}

/* About Me Section */
#about-me {
    padding: 50px 10px;
    padding-top: 0px;
    background-color: #839791;
    text-align: center;
    width: 100%;
    margin-left: 0 0;
}

#about-me h2 {
    color: #EFD5C3;
    font-size: 5em;
    font-family: 'Raleway';
    margin-bottom: 50px;
    margin-left: 0%; /* Aligns with About Me title */
    text-align: left; /* Align text to the left */
    padding-bottom: 0px;
}
/* Timeline */
.timeline {
    position: relative;
    width: 80%;
    margin: 0 auto;
    height: 5px;
    background-color: #EFD5C3;
    padding-bottom: 0px;
    margin-bottom: 0px;
    padding-top: 0px;
    margin-top: 10px;
}


.timeline-title {
    padding-bottom: 0px;
    padding-top: 0px;
    font-size: 2em;
    margin-bottom: 40px;
    color: #EFD5C3;
    font-family: 'Raleway';
}

.milestone {
    position: absolute;
    top: -7px;
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: #000;
}

.milestone-1 {
    left: 10%;
}

.milestone-2 {
    left: 50%;
}

.milestone-3 {
    left: 90%;
}

.milestone-text {
    position: absolute;
    font-size: 0.9em;
    color: #EFD5C3;
    text-align: center;
    transform: translateX(-50%);
    margin-top: 20px;
}

.milestone-1-text {
    left: 10%;
}

.milestone-2-text {
    left: 50%;
}

.milestone-3-text {
    left: 90%;
}


/* Skills Section */
#skills {
    padding: 40px 0px;
    background-color: #839791;
    text-align: center;
    width: 100vw;
    margin-bottom: 10px;
}

#skills h2 {
    padding-bottom: 0px;
    padding-top: 0px;
    font-size: 2em;
    margin-bottom: 60px;
    color: #EFD5C3;
    font-family: 'Raleway';
    width: 100vw;
}

.skill-item {
    font-size: 1.5em;
    color: #EFD5C3;
    margin: 0 0;
    font-family: 'Raleway';
}

/* Animation */
.skill-animation {
    position: relative;
    width: 80vw;
    height: 30vh;
    background-color: rgba(0, 0, 0, 0.1);
    overflow: hidden;
    margin: 0 auto;
    border-radius: 10px;
}

.skill-circle {
    position: absolute;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 50%;
    color: black;
    font-family: 'Raleway';
    font-size: 1em;
    text-align: center;
    transition: transform 1s ease-in-out;
}

/* Circle colors and sizes*/
.circle-1 { background-color: #E5D9F2; width: 90px; height: 90px; top: 15%; left: 20%; animation: moveCircles 5s infinite;}
.circle-2 { background-color: #A594F9; width: 120px; height: 120px; top: 30%; left: 30%; animation: moveCircles 7s infinite;}
.circle-3 { background-color: #FF90BC; width: 100px; height: 100px; top: 30%; left: 40%; animation: moveCircles 3s infinite;}
.circle-4 { background-color: #EEC759; width: 130px; height: 130px; top: 10%; left: 70%; animation: moveCircles 6s infinite;}
.circle-5 { background-color: #a1d6b2; width: 110px; height: 110px; top: 25%; left: 85%; animation: moveCircles 6s infinite;}
.circle-6 { background-color: #dd614a; width: 110px; height: 110px; top: 2%; left: 2%; animation: moveCircles 5s infinite;}
.circle-7 { background-color: #ffcf81; width: 110px; height: 110px; top: 15%; left: 30%; animation: moveCircles 9s infinite;}
.circle-8 { background-color: #F6FDC3; width: 150px; height: 150px; top: 5%; left: 50%; animation: moveCircles 8s infinite; }
.circle-9 { background-color: #CBFFA9; width: 80px; height: 80px; top: 40%; left: 10%; animation: moveCircles 5s infinite;}
.circle-10 { background-color: #FDCEDF; width: 110px; height: 110px; top: 25%; left: 70%; animation: moveCircles 4s infinite;}       
/* ... */

